dark mode bug on pokemon page resolved

--- a/src/css/pokemon.css
+++ b/src/css/pokemon.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
 }
 
-body.selecionado{
+body.selecionada{
   background:  linear-gradient(rgba(0, 0, 0, 0.773), rgba(0, 0, 0, 0.592)) ,url(../image/bg-pokemon.jpg) center center fixed no-repeat;
   background-size: cover;
 }
@@ -95,7 +95,7 @@ body.selecionado{
   width: 100%;
   height: 250px;
   object-fit: contain;
-  transition: 0.5s ease-in-out;
+  transition: 0.4s ease;
 }
 
 .detail-pokemon
